WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270875
REGRESSION(
275943@main
) TestWebKitAPI tests timing out
https://bugs.webkit.org/show_bug.cgi?id=270875
Summary
REGRESSION(275943@main) TestWebKitAPI tests timing out
Jer Noble
Reported
2024-03-12 13:31:01 PDT
REGRESSION(
275943@main
) TestWebKitAPI tests timing out
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-12 13:31:15 PDT
<
rdar://problem/124475961
>
Jer Noble
Comment 2
2024-03-12 13:40:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25791
EWS
Comment 3
2024-03-12 16:49:00 PDT
Committed
276009@main
(c5fa77c084b8): <
https://commits.webkit.org/276009@main
> Reviewed commits have been landed. Closing PR #25791 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug